syntax = "proto3";

package proto;

option go_package = "github.com/two-phase-commit-demo/gateway/proto";

service CoordinatorService {
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
}

message PlaceOrderRequest {
  string user_id = 1;
  int32 price = 2;
}

message PlaceOrderResponse {
  string message = 1;
  bool success = 2;
}
